Fri Dec 30 13:44:17 GMT 2011  Olly Betts <olly@survex.com>

	* perl/perl.i: Refactor to use XapianSWIGQueryItor class instead
	  of temporary std::vector<Xapian::Query> (but not via a SWIG
	  typemap currently).

Fri Dec 30 13:17:15 GMT 2011  Olly Betts <olly@survex.com>

	* lua/util.i: Add begin() and end() methods to XapianSWIGQueryItor
	  instead of using ctors and assignment.

Fri Dec 30 13:16:00 GMT 2011  Olly Betts <olly@survex.com>

	* lua/util.i: Improve error message.

Fri Dec 30 13:13:12 GMT 2011  Olly Betts <olly@survex.com>

	* lua/util.i: Eliminate "else" after "return".

Fri Dec 30 13:12:34 GMT 2011  Olly Betts <olly@survex.com>

	* lua/util.i: Remove "return;" at end of function.

Fri Dec 30 13:09:00 GMT 2011  Olly Betts <olly@survex.com>

	* lua/util.i: Fix typo in error message.

Fri Dec 30 13:07:06 GMT 2011  Olly Betts <olly@survex.com>

	* lua/util.i: Reindent and fix other whitespace oddities.

Fri Dec 30 12:23:38 GMT 2011  Olly Betts <olly@survex.com>

	* php/php.i: Add begin() method to XapianSWIGQueryItor instead of
	  using a ctor and assignment.

Fri Dec 30 03:15:31 GMT 2011  Olly Betts <olly@survex.com>

	* ruby/ruby.i: Add begin() and end() methods to XapianSWIGQueryItor
	  as that's clearer than overloaded ctors with dummy parameters.

Fri Dec 30 01:59:46 GMT 2011  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,xapian.i: We don't use
	  XAPIAN_MIXED_SUBQUERIES_BY_ITERATOR_TYPEMAP for C#, but we also don't
	  use the fake ctors added by %extend if this isn't defined, so also
	  skip them if SWIGCSHARP is defined.

Fri Dec 30 01:18:03 GMT 2011  Olly Betts <olly@survex.com>

	* xapian.i: While we don't currently use
	  XAPIAN_MIXED_SUBQUERIES_BY_ITERATOR_TYPEMAP for perl, we also don't
	  use the fake ctors added by %extend if this isn't defined, so also
	  skip them if SWIGPERL is defined.

Fri Dec 30 01:13:31 GMT 2011  Olly Betts <olly@survex.com>

	* xapian.i: Remove left-over comment associated with