@@ -1,3 +1,8 @@
+Wed Jan 04 06:03:09 GMT 2012  Olly Betts <olly@survex.com>
+
+	* php/smoketest.php: Add a test that Query ctor taking OP_NEAR with a
+	  window size works.
+
 Fri Dec 30 13:44:17 GMT 2011  Olly Betts <olly@survex.com>
 
 	* perl/perl.i: Refactor to use XapianSWIGQueryItor class instead
